k9s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  selector:
    app: flask-app  # Should match the pod labels
  ports:
    - protocol: TCP
      port: 8080   # Port exposed inside the cluster
      targetPort: 8080  # Port your Flask app listens on
  type: Loadbalancer  # Ingress will handle external access
